# rime-dict2

./: .gitignore  README.md  pyproject.toml  upload.sh
src/: __init__.py  __main__.py  word.py
src/cedict/: __init__.py  test_mod.py
src/galgame/: __init__.py  src.csv  test_mod.py
src/utils/: __init__.py  test_mod.py  var.py
src/zhwiki/: __init__.py
